<resources>
    <string name="app_name">Weather Today</string>
    <string name="city_pick_fragment_name">Find city</string>
    <string name="option_fragment_name">Options</string>
    <string name="weather_description">Weather Description</string>
    <string name="weather_status_text">WeatherStatusText</string>
    <string name="weather_location">WeatherLocationText</string>
    <string name="temperature_text">TemperatureText</string>
    <string name="day_of_week">Day of week</string>
    <string name="moisture">Moisture:</string>
    <string name="pressure">Pressure:</string>
    <string name="wind">Wind Speed:</string>
    <string name="enter_city">Enter city name</string>
    <string name="top_10_cities">Top 10 cities</string>
    <string name="cities">Cities</string>
    <string name="city_name">City name</string>
    <string name="country_name">Country name</string>
    <string name="show_additional_info">Show additional info</string>
    <string name="options">Options</string>
    <string name="app_theme">App theme:</string>
    <string name="select_language">Select language:</string>
    <string name="temperature_units">Temperature units:</string>
    <string name="pressure_units">Pressure units:</string>
    <string name="error_message">Error while receiving location data</string>
    <string name="save_settings">Save settings</string>
    <string name="search_results">Results:</string>
    <string name="speed_units">Speed units:</string>
    <string name="select_theme">Select Theme:</string>
    <string name="weather_icon_description">Weather icon</string>
    <string name="weather_postfix" translatable="false">°</string>
    <string name="history">History</string>
    <string name="done">Done</string>
    <string name="open_in_browser">Open in browser?</string>
    <string name="open">Open</string>
    <string name="developers">Developers</string>
    <string name="choose_city">Please, choose the city</string>
    <string name="date_text">Date text</string>
    <string name="weather_status_example">Sunny</string>
    <string name="this_app_developed_by">This app developed by:</string>
    <string name="developer_name">Alex Rogatin (FabledTria5)</string>
    <string name="special_thanks_to">Special thanks to:</string>
    <string name="geekbrains" translatable="false">GeekBrains</string>
    <string name="developer_android_com" translatable="false">developer.android.com</string>
    <string name="startandroid_ru" translatable="false">startandroid.ru</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="exit">Exit?</string>

    <string-array name="languages">
        <item>English</item>
        <item>Russian</item>
    </string-array>

    <string-array name="temperature_units">
        <item>C\u00B0</item>
        <item>F\u00B0</item>
    </string-array>

    <string-array name="pressure_units">
        <item>Pa</item>
        <item>mm Hg</item>
        <item>atm</item>
    </string-array>

    <string-array name="wind_speed_units">
        <item>m/s</item>
        <item>mi/h</item>
    </string-array>

    <string-array name="topCities">
        <item>New York</item>
        <item>Los Angeles</item>
        <item>London</item>
        <item>Paris</item>
        <item>Moscow</item>
        <item>Beijing</item>
        <item>Tokyo</item>
        <item>Sydney</item>
        <item>Dubai</item>
        <item>Berlin</item>
        <item>ASDF</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


</resources>