<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/home_nav">

    <fragment
        android:id="@+id/home_nav"
        android:name="com.example.weathertoday.fragments.MainFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_main">
        <argument
            android:name="cityName"
            android:defaultValue="DefaultString"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/developers_nav"
        android:name="com.example.weathertoday.fragments.DevelopersFragment"
        android:label="@string/developers"
        tools:layout="@layout/fragment_developers" />
    <fragment
        android:id="@+id/options_nav"
        android:name="com.example.weathertoday.fragments.OptionsFragment"
        android:label="@string/options" />
</navigation>