<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/backgroundView"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/default_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/locationInfoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_question"
            app:layout_constraintBottom_toBottomOf="@+id/weatherLocationView"
            app:layout_constraintStart_toEndOf="@+id/weatherLocationView"
            app:layout_constraintTop_toTopOf="@+id/weatherLocationView" />

        <TextView
            android:id="@+id/weatherStatusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="@string/weather_status_text"
            android:theme="@style/locationInfoText"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/weatherLocationView"
            app:layout_constraintEnd_toEndOf="@+id/weatherLocationView"
            app:layout_constraintStart_toStartOf="@+id/weatherLocationView" />

        <TextView
            android:id="@+id/weatherLocationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/weather_location"
            android:theme="@style/locationInfoText"
            app:layout_constraintBottom_toTopOf="@+id/weatherTemperatureView"
            app:layout_constraintEnd_toEndOf="@+id/weatherTemperatureView"
            app:layout_constraintStart_toStartOf="@+id/weatherTemperatureView" />

        <TextView
            android:id="@+id/weatherTemperatureView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/temperature_text"
            android:theme="@style/whiteTextStyle"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/backgroundView"
            app:layout_constraintTop_toTopOf="@id/backgroundView" />

        <TextView
            android:id="@+id/weatherMoistureValueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="0"
            android:theme="@style/weatherParamsValues"
            app:layout_constraintEnd_toEndOf="@+id/weatherMoistureView"
            app:layout_constraintStart_toStartOf="@+id/weatherMoistureView"
            app:layout_constraintTop_toBottomOf="@+id/weatherMoistureView"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/weatherMoistureView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/moisture"
            android:theme="@style/weatherParams"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
            app:layout_constraintEnd_toStartOf="@+id/weatherTemperatureView"
            app:layout_constraintStart_toStartOf="@id/backgroundView"
            app:layout_constraintTop_toBottomOf="@+id/weatherTemperatureView" />

        <TextView
            android:id="@+id/weatherPressureValueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="0"
            android:theme="@style/weatherParamsValues"
            app:layout_constraintEnd_toEndOf="@+id/weatherPressureView"
            app:layout_constraintStart_toStartOf="@+id/weatherPressureView"
            app:layout_constraintTop_toBottomOf="@+id/weatherPressureView"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/weatherPressureView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/pressure"
            android:theme="@style/weatherParams"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
            app:layout_constraintEnd_toEndOf="@+id/weatherTemperatureView"
            app:layout_constraintStart_toStartOf="@+id/weatherTemperatureView"
            app:layout_constraintTop_toBottomOf="@+id/weatherTemperatureView" />

        <TextView
            android:id="@+id/windSpeedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/wind"
            android:theme="@style/weatherParams"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundView"
            app:layout_constraintEnd_toEndOf="@id/backgroundView"
            app:layout_constraintStart_toEndOf="@+id/weatherTemperatureView"
            app:layout_constraintTop_toBottomOf="@+id/weatherTemperatureView" />

        <TextView
            android:id="@+id/windSpeedValueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="0"
            android:theme="@style/weatherParamsValues"
            app:layout_constraintEnd_toEndOf="@+id/windSpeedView"
            app:layout_constraintStart_toStartOf="@+id/windSpeedView"
            app:layout_constraintTop_toBottomOf="@+id/windSpeedView"
            tools:ignore="HardcodedText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/daysListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backgroundView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

